// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Address /> should not render if no address is passed in 1`] = `""`;

exports[`<Address /> should render as expected 1`] = `
<div
  className={
    Object {
      "data-css-1npkmgj": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    product.location.address
  </div>
</div>
`;

exports[`<Address /> should render more streets if necessary 1`] = `
<div
  className={
    Object {
      "data-css-1npkmgj": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    <div
      data-test-id="street2"
    >
      Some additional street info
    </div>
    product.location.address
  </div>
</div>
`;
